[package]
name = "async-task-book"
version = "0.1.0"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
async-task = "1"
async-std = {version = "1", features = ["unstable"]}
crossbeam-utils = "0.7"
crossbeam-channel = "0.4"
futures = "0.3"
num_cpus = "1"
once_cell = "1"
pin-utils = "0.1.0-alpha.4"
