[package]
name = "stjepang-blog"
version = "0.1.0"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"

[dependencies]
# For block_on.
async-task = "1"
pin-utils = "0.1.0-alpha"
crossbeam-utils = "0.7"

# For executor.
futures-channel = "0.3"
crossbeam-channel = "0.4"
once_cell = "1"
num_cpus = "1"

[dev-dependencies]
futures = "0.3"
async-std = "1"
tokio = { version = "0.2", features = ["rt-core"] }
