[package]
name = "tonic-book"
version = "0.1.0"
edition = "2018"
build = false

[[bin]]
name = "hello-client"
path = "examples/hello-client.rs"

[[bin]]
name = "hello-server"
path = "examples/hello-server.rs"

[dependencies]
futures-core = "0.3"
futures-channel = "0.3"
prost = "0.6"
tonic = "0.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }

[dev-dependencies]

[build-dependencies]
tonic-build = "0.1"
